--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "HelloWorld",
+    "name": "FindTheVillage",
     "slug": "FindTheVillage",
     "platforms": [
       "ios",
